--- a/src/server/pom.xml
+++ b/src/server/pom.xml
@@ -33,6 +33,25 @@
         <docker.directory>src/main/docker</docker.directory>
         <timestamp>${maven.build.timestamp}</timestamp>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
+
+        <!-- Cucumber Scenario Outline Examples listing released versions to test db migration against -->
+        <!-- anything added here must first be added as a artifact in build/plugins/plugins@maven-dependency-plugin -->
+        <cucumber.versions-to-test>  Examples:
+    | version   |
+    |    1.0.0  |
+    |    1.0.1  |
+    |    1.0.2  |
+    |    1.1.0  |
+    |    1.2.2  |
+    |    1.3.0  |
+    |           |
+        </cucumber.versions-to-test>
+        <!-- The following is used when upgrade tests are disabled. -->
+        <cucumber.no-versions-to-test>  Examples:
+    | version   |
+    |           |
+        </cucumber.no-versions-to-test>
+        <cucumber.upgrade-versions>${cucumber.no-versions-to-test}</cucumber.upgrade-versions>
     </properties>
 
     <dependencies>
@@ -246,6 +265,12 @@
     </dependencies>
 
     <build>
+      <testResources>
+        <testResource>
+          <directory>src/test/resources</directory>
+          <filtering>true</filtering>
+        </testResource>
+      </testResources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -543,45 +568,82 @@
                   </execution>
                 </executions>
             </plugin>
-          <plugin>
-            <groupId>org.apache.rat</groupId>
-            <artifactId>apache-rat-plugin</artifactId>
-            <configuration>
-              <skip>true</skip>
-            </configuration>
-          </plugin>
+            <plugin>
+              <groupId>org.apache.rat</groupId>
+              <artifactId>apache-rat-plugin</artifactId>
+              <configuration>
+                <skip>true</skip>
+              </configuration>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <configuration>
+                  <systemPropertyVariables>
+                    <cucumber.versions-to-test>${cucumber.versions-to-test}</cucumber.versions-to-test>
+                    <grim.reaper.min>0</grim.reaper.min>
+                  </systemPropertyVariables>
+              </configuration>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-dependency-plugin</artifactId>
+              <executions>
+                  <execution>
+                      <phase>generate-test-resources</phase>
+                      <goals>
+                          <goal>copy</goal>
+                      </goals>
+                      <configuration>
+                        <!-- all reaper versions to test against must be listed here -->
+                        <artifactItems>
+                            <artifactItem>
+                                <groupId>io.cassandrareaper</groupId>
+                                <artifactId>cassandra-reaper</artifactId>
+                                <version>1.0.0</version>
+                            </artifactItem>
+                            <artifactItem>
+                                <groupId>io.cassandrareaper</groupId>
+                                <artifactId>cassandra-reaper</artifactId>
+                                <version>1.0.1</version>
+                            </artifactItem>
+                            <artifactItem>
+                                <groupId>io.cassandrareaper</groupId>
+                                <artifactId>cassandra-reaper</artifactId>
+                                <version>1.0.2</version>
+                            </artifactItem>
+                            <artifactItem>
+                                <groupId>io.cassandrareaper</groupId>
+                                <artifactId>cassandra-reaper</artifactId>
+                                <version>1.1.0</version>
+                            </artifactItem>
+                            <artifactItem>
+                                <groupId>io.cassandrareaper</groupId>
+                                <artifactId>cassandra-reaper</artifactId>
+                                <version>1.2.2</version>
+                            </artifactItem>
+                            <artifactItem>
+                                <groupId>io.cassandrareaper</groupId>
+                                <artifactId>cassandra-reaper</artifactId>
+                                <version>1.3.0</version>
+                            </artifactItem>
+                        </artifactItems>
+                        <outputDirectory>${project.build.directory}/test-jars</outputDirectory>
+                      </configuration>
+                  </execution>
+              </executions>
+            </plugin>
         </plugins>
     </build>
     <profiles>
       <profile>
-        <id>skip-tests-needing-all-nodes-reachable</id>
-        <build>
-          <plugins>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <inherited>true</inherited>
-                <configuration>
-                  <argLine>${surefireArgLine} -Dcucumber.options="-t ~@all_nodes_reachable"</argLine>
-                </configuration>
-            </plugin>
-          </plugins>
-        </build>
-      </profile>
-      <profile>
-        <id>only-tests-needing-all-nodes-reachable</id>
-        <build>
-          <plugins>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <inherited>true</inherited>
-                <configuration>
-                  <argLine>${surefireArgLine} -Dcucumber.options="-t @all_nodes_reachable"</argLine>
-                </configuration>
-            </plugin>
-          </plugins>
-        </build>
+        <id>integration-upgrade-tests</id>
+        <properties>
+          <cucumber.upgrade-versions>${cucumber.versions-to-test}</cucumber.upgrade-versions>
+        </properties>
       </profile>
     </profiles>
+
     <reporting>
         <plugins>
             <plugin>
