--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,26 +69,26 @@ aliases:
                 echo "cassandra     readwrite" >> /usr/lib/jvm/java-8-openjdk-amd64/jre/lib/management/jmxremote.access
                 cat /usr/lib/jvm/java-8-openjdk-amd64/jre/lib/management/jmxremote.access
                 ccm create test -v $CASSANDRA_VERSION
-                ccm populate --vnodes -n 2:2
+                ccm populate --vnodes -n 4
                 sed -i 's/etc\/cassandra\/jmxremote.password/home\/circleci\/.local\/jmxremote.password/' ~/.ccm/test/node1/conf/cassandra-env.sh
                 sed -i 's/etc\/cassandra\/jmxremote.password/home\/circleci\/.local\/jmxremote.password/' ~/.ccm/test/node2/conf/cassandra-env.sh
-                if [ echo $JOB_COMMAND | grep -q "-Pskip-tests-needing-all-nodes-reachable" ] ; then
+                #if [ echo $JOB_COMMAND | grep -q "-Pskip-tests-needing-all-nodes-reachable" ] ; then
                   # scenarios that are not tagged with @all_nodes_reachable can be tested against an unreachable DC2
-                  sed -i 's/etc\/cassandra\/jmxremote.password/home\/circleci\/.local\/jmxremote.blank.password/' ~/.ccm/test/node3/conf/cassandra-env.sh
-                  sed -i 's/etc\/cassandra\/jmxremote.password/home\/circleci\/.local\/jmxremote.blank.password/' ~/.ccm/test/node4/conf/cassandra-env.sh
-                else
+                  #sed -i 's/etc\/cassandra\/jmxremote.password/home\/circleci\/.local\/jmxremote.blank.password/' ~/.ccm/test/node3/conf/cassandra-env.sh
+                  #sed -i 's/etc\/cassandra\/jmxremote.password/home\/circleci\/.local\/jmxremote.blank.password/' ~/.ccm/test/node4/conf/cassandra-env.sh
+                #else
                   # @all_nodes_reachable scenarios need all datacenters+nodes reachable
                   sed -i 's/etc\/cassandra\/jmxremote.password/home\/circleci\/.local\/jmxremote.password/' ~/.ccm/test/node3/conf/cassandra-env.sh
                   sed -i 's/etc\/cassandra\/jmxremote.password/home\/circleci\/.local\/jmxremote.password/' ~/.ccm/test/node4/conf/cassandra-env.sh
-                fi
-                sed -i 's/#MAX_HEAP_SIZE="4G"/MAX_HEAP_SIZE="160m"/' ~/.ccm/test/node1/conf/cassandra-env.sh
-                sed -i 's/#MAX_HEAP_SIZE="4G"/MAX_HEAP_SIZE="160m"/' ~/.ccm/test/node2/conf/cassandra-env.sh
-                sed -i 's/#MAX_HEAP_SIZE="4G"/MAX_HEAP_SIZE="160m"/' ~/.ccm/test/node3/conf/cassandra-env.sh
-                sed -i 's/#MAX_HEAP_SIZE="4G"/MAX_HEAP_SIZE="160m"/' ~/.ccm/test/node4/conf/cassandra-env.sh
-                sed -i 's/#HEAP_NEWSIZE="800M"/HEAP_NEWSIZE="128M"/' ~/.ccm/test/node1/conf/cassandra-env.sh
-                sed -i 's/#HEAP_NEWSIZE="800M"/HEAP_NEWSIZE="128M"/' ~/.ccm/test/node2/conf/cassandra-env.sh
-                sed -i 's/#HEAP_NEWSIZE="800M"/HEAP_NEWSIZE="128M"/' ~/.ccm/test/node3/conf/cassandra-env.sh
-                sed -i 's/#HEAP_NEWSIZE="800M"/HEAP_NEWSIZE="128M"/' ~/.ccm/test/node4/conf/cassandra-env.sh
+                #fi
+                sed -i 's/#MAX_HEAP_SIZE="4G"/MAX_HEAP_SIZE="176m"/' ~/.ccm/test/node1/conf/cassandra-env.sh
+                sed -i 's/#MAX_HEAP_SIZE="4G"/MAX_HEAP_SIZE="176m"/' ~/.ccm/test/node2/conf/cassandra-env.sh
+                sed -i 's/#MAX_HEAP_SIZE="4G"/MAX_HEAP_SIZE="176m"/' ~/.ccm/test/node3/conf/cassandra-env.sh
+                sed -i 's/#MAX_HEAP_SIZE="4G"/MAX_HEAP_SIZE="176m"/' ~/.ccm/test/node4/conf/cassandra-env.sh
+                sed -i 's/#HEAP_NEWSIZE="800M"/HEAP_NEWSIZE="144M"/' ~/.ccm/test/node1/conf/cassandra-env.sh
+                sed -i 's/#HEAP_NEWSIZE="800M"/HEAP_NEWSIZE="144M"/' ~/.ccm/test/node2/conf/cassandra-env.sh
+                sed -i 's/#HEAP_NEWSIZE="800M"/HEAP_NEWSIZE="144M"/' ~/.ccm/test/node3/conf/cassandra-env.sh
+                sed -i 's/#HEAP_NEWSIZE="800M"/HEAP_NEWSIZE="144M"/' ~/.ccm/test/node4/conf/cassandra-env.sh
                 sed -i 's/_timeout_in_ms:.*/_timeout_in_ms: 60000/' ~/.ccm/test/node1/conf/cassandra.yaml
                 sed -i 's/_timeout_in_ms:.*/_timeout_in_ms: 60000/' ~/.ccm/test/node2/conf/cassandra.yaml
                 sed -i 's/_timeout_in_ms:.*/_timeout_in_ms: 60000/' ~/.ccm/test/node3/conf/cassandra.yaml
@@ -125,6 +125,10 @@ aliases:
                 sed -i 's/enable_materialized_views: true/enable_materialized_views: false/' ~/.ccm/test/node2/conf/cassandra.yaml
                 sed -i 's/enable_materialized_views: true/enable_materialized_views: false/' ~/.ccm/test/node3/conf/cassandra.yaml
                 sed -i 's/enable_materialized_views: true/enable_materialized_views: false/' ~/.ccm/test/node4/conf/cassandra.yaml
+                sed -i 's/internode_compression: dc/internode_compression: none/' ~/.ccm/test/node1/conf/cassandra.yaml
+                sed -i 's/internode_compression: dc/internode_compression: none/' ~/.ccm/test/node2/conf/cassandra.yaml
+                sed -i 's/internode_compression: dc/internode_compression: none/' ~/.ccm/test/node3/conf/cassandra.yaml
+                sed -i 's/internode_compression: dc/internode_compression: none/' ~/.ccm/test/node4/conf/cassandra.yaml
                 echo 'phi_convict_threshold: 16' >> ~/.ccm/test/node1/conf/cassandra.yaml
                 echo 'phi_convict_threshold: 16' >> ~/.ccm/test/node2/conf/cassandra.yaml
                 echo 'phi_convict_threshold: 16' >> ~/.ccm/test/node3/conf/cassandra.yaml
@@ -133,7 +137,7 @@ aliases:
                 ccm status
                 ccm checklogerror
                 nohup bash -c "(while [ true ] ; do sleep 1 ; ccm start ; done) &"
-                MAVEN_OPTS="-Xmx1g" mvn -B install -DskipTests
+                mvn install -B -DskipTests
                 sh -c '$JOB_COMMAND'
 
         - store_test_results:
@@ -174,7 +178,6 @@ jobs:
     c_2-1_h2:
       environment:
         CASSANDRA_VERSION: 2.1.20
-
         JOB_COMMAND: mvn -B surefire:test -Dtest=ReaperH2IT -Pskip-tests-needing-all-nodes-reachable
       <<: *default_job
     c_2-1_one-reaper:
@@ -330,12 +333,12 @@ jobs:
     c_4-0_memory:
       environment:
         CASSANDRA_VERSION: git:trunk
-        JOB_COMMAND: mvn -B surefire:test -Dtest=ReaperIT -Pskip-tests-needing-all-nodes-reachable
+        JOB_COMMAND: mvn surefire:test -B -DsurefireArgLine="-Xmx256m" -Dtest=ReaperIT -Pskip-tests-needing-all-nodes-reachable
       <<: *default_job
     c_4-0_h2:
       environment:
         CASSANDRA_VERSION: git:trunk
-        JOB_COMMAND: mvn -B surefire:test -Dtest=ReaperH2IT -Pskip-tests-needing-all-nodes-reachable
+        JOB_COMMAND: mvn surefire:test -B -DsurefireArgLine="-Xmx256m" -Dtest=ReaperH2IT -Pskip-tests-needing-all-nodes-reachable
       <<: *default_job
     c_4-0_one-reaper:
       environment:
