--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,7 +69,7 @@ aliases:
                 echo "cassandra     readwrite" >> /usr/lib/jvm/java-8-openjdk-amd64/jre/lib/management/jmxremote.access
                 cat /usr/lib/jvm/java-8-openjdk-amd64/jre/lib/management/jmxremote.access
                 ccm create test -v $CASSANDRA_VERSION
-                ccm populate --vnodes -n 4:0
+                ccm populate --vnodes -n 3:0
                 sed -i 's/etc\/cassandra\/jmxremote.password/home\/circleci\/.local\/jmxremote.password/' ~/.ccm/test/node1/conf/cassandra-env.sh
                 sed -i 's/etc\/cassandra\/jmxremote.password/home\/circleci\/.local\/jmxremote.password/' ~/.ccm/test/node2/conf/cassandra-env.sh
                 #if [ echo $JOB_COMMAND | grep -q "-Pskip-tests-needing-all-nodes-reachable" ] ; then
@@ -79,71 +79,71 @@ aliases:
                 #else
                   # @all_nodes_reachable scenarios need all datacenters+nodes reachable
                   sed -i 's/etc\/cassandra\/jmxremote.password/home\/circleci\/.local\/jmxremote.password/' ~/.ccm/test/node3/conf/cassandra-env.sh
-                  sed -i 's/etc\/cassandra\/jmxremote.password/home\/circleci\/.local\/jmxremote.password/' ~/.ccm/test/node4/conf/cassandra-env.sh
+                  #sed -i 's/etc\/cassandra\/jmxremote.password/home\/circleci\/.local\/jmxremote.password/' ~/.ccm/test/node4/conf/cassandra-env.sh
                 #fi
                 sed -i 's/#MAX_HEAP_SIZE="4G"/MAX_HEAP_SIZE="176m"/' ~/.ccm/test/node1/conf/cassandra-env.sh
                 sed -i 's/#MAX_HEAP_SIZE="4G"/MAX_HEAP_SIZE="176m"/' ~/.ccm/test/node2/conf/cassandra-env.sh
                 sed -i 's/#MAX_HEAP_SIZE="4G"/MAX_HEAP_SIZE="176m"/' ~/.ccm/test/node3/conf/cassandra-env.sh
-                sed -i 's/#MAX_HEAP_SIZE="4G"/MAX_HEAP_SIZE="176m"/' ~/.ccm/test/node4/conf/cassandra-env.sh
+                #sed -i 's/#MAX_HEAP_SIZE="4G"/MAX_HEAP_SIZE="176m"/' ~/.ccm/test/node4/conf/cassandra-env.sh
                 sed -i 's/#HEAP_NEWSIZE="800M"/HEAP_NEWSIZE="144M"/' ~/.ccm/test/node1/conf/cassandra-env.sh
                 sed -i 's/#HEAP_NEWSIZE="800M"/HEAP_NEWSIZE="144M"/' ~/.ccm/test/node2/conf/cassandra-env.sh
                 sed -i 's/#HEAP_NEWSIZE="800M"/HEAP_NEWSIZE="144M"/' ~/.ccm/test/node3/conf/cassandra-env.sh
-                sed -i 's/#HEAP_NEWSIZE="800M"/HEAP_NEWSIZE="144M"/' ~/.ccm/test/node4/conf/cassandra-env.sh
+                #sed -i 's/#HEAP_NEWSIZE="800M"/HEAP_NEWSIZE="144M"/' ~/.ccm/test/node4/conf/cassandra-env.sh
                 sed -i 's/_timeout_in_ms:.*/_timeout_in_ms: 60000/' ~/.ccm/test/node1/conf/cassandra.yaml
                 sed -i 's/_timeout_in_ms:.*/_timeout_in_ms: 60000/' ~/.ccm/test/node2/conf/cassandra.yaml
                 sed -i 's/_timeout_in_ms:.*/_timeout_in_ms: 60000/' ~/.ccm/test/node3/conf/cassandra.yaml
-                sed -i 's/_timeout_in_ms:.*/_timeout_in_ms: 60000/' ~/.ccm/test/node4/conf/cassandra.yaml
+                #sed -i 's/_timeout_in_ms:.*/_timeout_in_ms: 60000/' ~/.ccm/test/node4/conf/cassandra.yaml
                 if [ echo $CASSANDRA_VERSION | grep -q "git:trunk" ] ; then
                   sed -i 's/start_rpc: true//' ~/.ccm/test/node1/conf/cassandra.yaml
                   sed -i 's/start_rpc: true//' ~/.ccm/test/node2/conf/cassandra.yaml
                   sed -i 's/start_rpc: true//' ~/.ccm/test/node3/conf/cassandra.yaml
-                  sed -i 's/start_rpc: true//' ~/.ccm/test/node4/conf/cassandra.yaml
+                  #sed -i 's/start_rpc: true//' ~/.ccm/test/node4/conf/cassandra.yaml
                   echo '-Dcassandra.max_local_pause_in_ms=15000' >> ~/.ccm/test/node1/conf/jvm-server.options
                   echo '-Dcassandra.max_local_pause_in_ms=15000' >> ~/.ccm/test/node2/conf/jvm-server.options
                   echo '-Dcassandra.max_local_pause_in_ms=15000' >> ~/.ccm/test/node3/conf/jvm-server.options
-                  echo '-Dcassandra.max_local_pause_in_ms=15000' >> ~/.ccm/test/node4/conf/jvm-server.options
+                  #echo '-Dcassandra.max_local_pause_in_ms=15000' >> ~/.ccm/test/node4/conf/jvm-server.options
                 else
                   sed -i 's/start_rpc: true/start_rpc: false/' ~/.ccm/test/node1/conf/cassandra.yaml
                   sed -i 's/start_rpc: true/start_rpc: false/' ~/.ccm/test/node2/conf/cassandra.yaml
                   sed -i 's/start_rpc: true/start_rpc: false/' ~/.ccm/test/node3/conf/cassandra.yaml
-                  sed -i 's/start_rpc: true/start_rpc: false/' ~/.ccm/test/node4/conf/cassandra.yaml
+                  #sed -i 's/start_rpc: true/start_rpc: false/' ~/.ccm/test/node4/conf/cassandra.yaml
                 fi
                 sed -i 's/cross_node_timeout: false/cross_node_timeout: true/' ~/.ccm/test/node1/conf/cassandra.yaml
                 sed -i 's/cross_node_timeout: false/cross_node_timeout: true/' ~/.ccm/test/node2/conf/cassandra.yaml
                 sed -i 's/cross_node_timeout: false/cross_node_timeout: true/' ~/.ccm/test/node3/conf/cassandra.yaml
-                sed -i 's/cross_node_timeout: false/cross_node_timeout: true/' ~/.ccm/test/node4/conf/cassandra.yaml
+                #sed -i 's/cross_node_timeout: false/cross_node_timeout: true/' ~/.ccm/test/node4/conf/cassandra.yaml
                 sed -i 's/concurrent_reads: 32/concurrent_reads: 4/' ~/.ccm/test/node1/conf/cassandra.yaml
                 sed -i 's/concurrent_reads: 32/concurrent_reads: 4/' ~/.ccm/test/node2/conf/cassandra.yaml
                 sed -i 's/concurrent_reads: 32/concurrent_reads: 4/' ~/.ccm/test/node3/conf/cassandra.yaml
-                sed -i 's/concurrent_reads: 32/concurrent_reads: 4/' ~/.ccm/test/node4/conf/cassandra.yaml
+                #sed -i 's/concurrent_reads: 32/concurrent_reads: 4/' ~/.ccm/test/node4/conf/cassandra.yaml
                 sed -i 's/concurrent_writes: 32/concurrent_writes: 4/' ~/.ccm/test/node1/conf/cassandra.yaml
                 sed -i 's/concurrent_writes: 32/concurrent_writes: 4/' ~/.ccm/test/node2/conf/cassandra.yaml
                 sed -i 's/concurrent_writes: 32/concurrent_writes: 4/' ~/.ccm/test/node3/conf/cassandra.yaml
-                sed -i 's/concurrent_writes: 32/concurrent_writes: 4/' ~/.ccm/test/node4/conf/cassandra.yaml
+                #sed -i 's/concurrent_writes: 32/concurrent_writes: 4/' ~/.ccm/test/node4/conf/cassandra.yaml
                 sed -i 's/concurrent_counter_writes: 32/concurrent_counter_writes: 4/' ~/.ccm/test/node1/conf/cassandra.yaml
                 sed -i 's/concurrent_counter_writes: 32/concurrent_counter_writes: 4/' ~/.ccm/test/node2/conf/cassandra.yaml
                 sed -i 's/concurrent_counter_writes: 32/concurrent_counter_writes: 4/' ~/.ccm/test/node3/conf/cassandra.yaml
-                sed -i 's/concurrent_counter_writes: 32/concurrent_counter_writes: 4/' ~/.ccm/test/node4/conf/cassandra.yaml
+                #sed -i 's/concurrent_counter_writes: 32/concurrent_counter_writes: 4/' ~/.ccm/test/node4/conf/cassandra.yaml
                 sed -i 's/num_tokens: 256/num_tokens: 4/' ~/.ccm/test/node1/conf/cassandra.yaml
                 sed -i 's/num_tokens: 256/num_tokens: 4/' ~/.ccm/test/node2/conf/cassandra.yaml
                 sed -i 's/num_tokens: 256/num_tokens: 4/' ~/.ccm/test/node3/conf/cassandra.yaml
-                sed -i 's/num_tokens: 256/num_tokens: 4/' ~/.ccm/test/node4/conf/cassandra.yaml
+                #sed -i 's/num_tokens: 256/num_tokens: 4/' ~/.ccm/test/node4/conf/cassandra.yaml
                 sed -i 's/auto_snapshot: true/auto_snapshot: false/' ~/.ccm/test/node1/conf/cassandra.yaml
                 sed -i 's/auto_snapshot: true/auto_snapshot: false/' ~/.ccm/test/node2/conf/cassandra.yaml
                 sed -i 's/auto_snapshot: true/auto_snapshot: false/' ~/.ccm/test/node3/conf/cassandra.yaml
-                sed -i 's/auto_snapshot: true/auto_snapshot: false/' ~/.ccm/test/node4/conf/cassandra.yaml
+                #sed -i 's/auto_snapshot: true/auto_snapshot: false/' ~/.ccm/test/node4/conf/cassandra.yaml
                 sed -i 's/enable_materialized_views: true/enable_materialized_views: false/' ~/.ccm/test/node1/conf/cassandra.yaml
                 sed -i 's/enable_materialized_views: true/enable_materialized_views: false/' ~/.ccm/test/node2/conf/cassandra.yaml
                 sed -i 's/enable_materialized_views: true/enable_materialized_views: false/' ~/.ccm/test/node3/conf/cassandra.yaml
-                sed -i 's/enable_materialized_views: true/enable_materialized_views: false/' ~/.ccm/test/node4/conf/cassandra.yaml
+                #sed -i 's/enable_materialized_views: true/enable_materialized_views: false/' ~/.ccm/test/node4/conf/cassandra.yaml
                 sed -i 's/internode_compression: dc/internode_compression: none/' ~/.ccm/test/node1/conf/cassandra.yaml
                 sed -i 's/internode_compression: dc/internode_compression: none/' ~/.ccm/test/node2/conf/cassandra.yaml
                 sed -i 's/internode_compression: dc/internode_compression: none/' ~/.ccm/test/node3/conf/cassandra.yaml
-                sed -i 's/internode_compression: dc/internode_compression: none/' ~/.ccm/test/node4/conf/cassandra.yaml
+                #sed -i 's/internode_compression: dc/internode_compression: none/' ~/.ccm/test/node4/conf/cassandra.yaml
                 echo 'phi_convict_threshold: 16' >> ~/.ccm/test/node1/conf/cassandra.yaml
                 echo 'phi_convict_threshold: 16' >> ~/.ccm/test/node2/conf/cassandra.yaml
                 echo 'phi_convict_threshold: 16' >> ~/.ccm/test/node3/conf/cassandra.yaml
-                echo 'phi_convict_threshold: 16' >> ~/.ccm/test/node4/conf/cassandra.yaml
+                #echo 'phi_convict_threshold: 16' >> ~/.ccm/test/node4/conf/cassandra.yaml
                 ccm start -v
                 ccm status
                 ccm checklogerror
@@ -211,7 +211,7 @@ jobs:
     c_2-1_flapping-reapers:
       environment:
         CASSANDRA_VERSION: 2.1.20
-        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx1g" -Dtest=ReaperCassandraIT -Pskip-tests-needing-all-nodes-reachable -Dgrim.reaper.min=2 -Dgrim.reaper.max=4
+        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx1g" -Dtest=ReaperCassandraIT -Pskip-tests-needing-all-nodes-reachable -Dgrim.reaper.min=2 -Dgrim.reaper.max=3
       <<: *default_job
     c_2-1_one-reaper_incremental:
       environment:
@@ -226,7 +226,7 @@ jobs:
     c_2-1_flapping-reapers_incremental:
       environment:
         CASSANDRA_VERSION: 2.1.20
-        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx1g" -Dtest=ReaperCassandraIT -Ponly-tests-needing-all-nodes-reachable -Dgrim.reaper.min=2 -Dgrim.reaper.max=4
+        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx1g" -Dtest=ReaperCassandraIT -Ponly-tests-needing-all-nodes-reachable -Dgrim.reaper.min=2 -Dgrim.reaper.max=3
       <<: *default_job
     c_2-2_memory:
       environment:
@@ -251,7 +251,7 @@ jobs:
     c_2-2_flapping-reapers:
       environment:
         CASSANDRA_VERSION: 2.2.13
-        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx1g" -Dtest=ReaperCassandraIT -Pskip-tests-needing-all-nodes-reachable -Dgrim.reaper.min=2 -Dgrim.reaper.max=4
+        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx1g" -Dtest=ReaperCassandraIT -Pskip-tests-needing-all-nodes-reachable -Dgrim.reaper.min=2 -Dgrim.reaper.max=3
       <<: *default_job
     c_2-2_one-reaper_incremental:
       environment:
@@ -266,7 +266,7 @@ jobs:
     c_2-2_flapping-reapers_incremental:
       environment:
         CASSANDRA_VERSION: 2.2.13
-        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx1g" -Dtest=ReaperCassandraIT -Ponly-tests-needing-all-nodes-reachable -Dgrim.reaper.min=2 -Dgrim.reaper.max=4
+        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx1g" -Dtest=ReaperCassandraIT -Ponly-tests-needing-all-nodes-reachable -Dgrim.reaper.min=2 -Dgrim.reaper.max=3
       <<: *default_job
     c_3-0_memory:
       environment:
@@ -291,7 +291,7 @@ jobs:
     c_3-0_flapping-reapers:
       environment:
         CASSANDRA_VERSION: 3.0.17
-        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx1g" -Dtest=ReaperCassandraIT -Pskip-tests-needing-all-nodes-reachable -Dgrim.reaper.min=2 -Dgrim.reaper.max=4
+        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx1g" -Dtest=ReaperCassandraIT -Pskip-tests-needing-all-nodes-reachable -Dgrim.reaper.min=2 -Dgrim.reaper.max=3
       <<: *default_job
     c_3-0_one-reaper_incremental:
       environment:
@@ -306,7 +306,7 @@ jobs:
     c_3-0_flapping-reapers_incremental:
       environment:
         CASSANDRA_VERSION: 3.0.17
-        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx1g" -Dtest=ReaperCassandraIT -Ponly-tests-needing-all-nodes-reachable -Dgrim.reaper.min=2 -Dgrim.reaper.max=4
+        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx1g" -Dtest=ReaperCassandraIT -Ponly-tests-needing-all-nodes-reachable -Dgrim.reaper.min=2 -Dgrim.reaper.max=3
       <<: *default_job
     c_3-11_memory:
       environment:
@@ -331,7 +331,7 @@ jobs:
     c_3-11_flapping-reapers:
       environment:
         CASSANDRA_VERSION: 3.11.3
-        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx1g" -Dtest=ReaperCassandraIT -Pskip-tests-needing-all-nodes-reachable -Dgrim.reaper.min=2 -Dgrim.reaper.max=4
+        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx1g" -Dtest=ReaperCassandraIT -Pskip-tests-needing-all-nodes-reachable -Dgrim.reaper.min=2 -Dgrim.reaper.max=3
       <<: *default_job
     c_3-11_one-reaper_incremental:
       environment:
@@ -346,7 +346,7 @@ jobs:
     c_3-11_flapping-reapers_incremental:
       environment:
         CASSANDRA_VERSION: 3.11.3
-        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx1g" -Dtest=ReaperCassandraIT -Ponly-tests-needing-all-nodes-reachable -Dgrim.reaper.min=2 -Dgrim.reaper.max=4
+        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx1g" -Dtest=ReaperCassandraIT -Ponly-tests-needing-all-nodes-reachable -Dgrim.reaper.min=2 -Dgrim.reaper.max=3
       <<: *default_job
     c_4-0_memory:
       environment:
@@ -371,7 +371,7 @@ jobs:
     c_4-0_flapping-reapers:
       environment:
         CASSANDRA_VERSION: git:trunk
-        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx1g" -Dtest=ReaperCassandraIT -Pskip-tests-needing-all-nodes-reachable -Dgrim.reaper.min=2 -Dgrim.reaper.max=4
+        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx1g" -Dtest=ReaperCassandraIT -Pskip-tests-needing-all-nodes-reachable -Dgrim.reaper.min=2 -Dgrim.reaper.max=3
       <<: *default_job
     c_4-0_one-reaper_incremental:
       environment:
@@ -386,7 +386,7 @@ jobs:
     c_4-0_flapping-reapers_incremental:
       environment:
         CASSANDRA_VERSION: git:trunk
-        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx1g" -Dtest=ReaperCassandraIT -Ponly-tests-needing-all-nodes-reachable -Dgrim.reaper.min=2 -Dgrim.reaper.max=4
+        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx1g" -Dtest=ReaperCassandraIT -Ponly-tests-needing-all-nodes-reachable -Dgrim.reaper.min=2 -Dgrim.reaper.max=3
       <<: *default_job
 workflows:
   version: 2
