--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,8 +72,8 @@ aliases:
                 ccm create test -v $CASSANDRA_VERSION
                 if  echo "$CASSANDRA_VERSION" | grep -q "trunk"  ; then
                   # Cassandra-4.0 appears to be much more demanding on off-heap memory, and on CircleCI we have success running only two nodes
-                  MIN_NODES=1
-                  MAX_NODES=2
+                  MIN_NODES=2
+                  MAX_NODES=4
                 else
                   MIN_NODES=2
                   MAX_NODES=4
@@ -91,8 +91,13 @@ aliases:
                       sed -i 's/etc\/cassandra\/jmxremote.password/home\/circleci\/.local\/jmxremote.password/' ~/.ccm/test/node$i/conf/cassandra-env.sh
                     fi
                   fi
-                  sed -i 's/#MAX_HEAP_SIZE="4G"/MAX_HEAP_SIZE="176m"/' ~/.ccm/test/node$i/conf/cassandra-env.sh
-                  sed -i 's/#HEAP_NEWSIZE="800M"/HEAP_NEWSIZE="144M"/' ~/.ccm/test/node$i/conf/cassandra-env.sh
+                  if  echo "$CASSANDRA_VERSION" | grep -q "trunk"  ; then
+                    sed -i 's/#MAX_HEAP_SIZE="4G"/MAX_HEAP_SIZE="128m"/' ~/.ccm/test/node$i/conf/cassandra-env.sh
+                    sed -i 's/#HEAP_NEWSIZE="800M"/HEAP_NEWSIZE="104M"/' ~/.ccm/test/node$i/conf/cassandra-env.sh
+                  else
+                    sed -i 's/#MAX_HEAP_SIZE="4G"/MAX_HEAP_SIZE="176m"/' ~/.ccm/test/node$i/conf/cassandra-env.sh
+                    sed -i 's/#HEAP_NEWSIZE="800M"/HEAP_NEWSIZE="144M"/' ~/.ccm/test/node$i/conf/cassandra-env.sh
+                  fi
                   sed -i 's/_timeout_in_ms:.*/_timeout_in_ms: 60000/' ~/.ccm/test/node$i/conf/cassandra.yaml
                   sed -i 's/cross_node_timeout: false/cross_node_timeout: true/' ~/.ccm/test/node$i/conf/cassandra.yaml
                   sed -i 's/concurrent_reads: 32/concurrent_reads: 4/' ~/.ccm/test/node$i/conf/cassandra.yaml
@@ -111,10 +116,10 @@ aliases:
                     sed -i 's/start_rpc: true/start_rpc: false/' ~/.ccm/test/node$i/conf/cassandra.yaml
                   fi
                 done
+                mvn install -B -DskipTests
                 ccm start -v
                 ccm status
                 ccm checklogerror
-                mvn install -B -DskipTests
                 sh -c '$JOB_COMMAND'
 
         - run:
