--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,10 @@ aliases:
       docker:
         # specify the version you desire here
         - image: circleci/openjdk:8-jdk-node-browsers
+          environment:
+            LOCAL_JMX: no
+            MIN_NODES: 2
+            MAX_NODES: 4
 
       steps:
         - checkout
@@ -60,7 +64,6 @@ aliases:
             name: Start ccm and run tests
             command: |
                 set -x
-                export LOCAL_JMX=no
                 mkdir -p ~/.local
                 cp src/ci/jmxremote.password ~/.local/jmxremote.password
                 touch ~/.local/jmxremote.blank.password
@@ -70,14 +73,6 @@ aliases:
                 echo "cassandra     readwrite" >> /usr/lib/jvm/java-8-openjdk-amd64/jre/lib/management/jmxremote.access
                 cat /usr/lib/jvm/java-8-openjdk-amd64/jre/lib/management/jmxremote.access
                 ccm create test -v $CASSANDRA_VERSION
-                if  echo "$CASSANDRA_VERSION" | grep -q "trunk"  ; then
-                  # Cassandra-4.0 appears to be much more demanding on off-heap memory, and on CircleCI we have success running only two nodes
-                  MIN_NODES=2
-                  MAX_NODES=4
-                else
-                  MIN_NODES=2
-                  MAX_NODES=4
-                fi
                 ccm populate --vnodes -n $MIN_NODES:$MIN_NODES
                 for i in `seq 1 $MAX_NODES` ; do
                   if [ "$i" -le "$MIN_NODES" ] ; then
@@ -91,13 +86,13 @@ aliases:
                       sed -i 's/etc\/cassandra\/jmxremote.password/home\/circleci\/.local\/jmxremote.password/' ~/.ccm/test/node$i/conf/cassandra-env.sh
                     fi
                   fi
-                  if  echo "$CASSANDRA_VERSION" | grep -q "trunk"  ; then
+                  #if  echo "$CASSANDRA_VERSION" | grep -q "trunk"  ; then
                     sed -i 's/#MAX_HEAP_SIZE="4G"/MAX_HEAP_SIZE="128m"/' ~/.ccm/test/node$i/conf/cassandra-env.sh
                     sed -i 's/#HEAP_NEWSIZE="800M"/HEAP_NEWSIZE="104M"/' ~/.ccm/test/node$i/conf/cassandra-env.sh
-                  else
-                    sed -i 's/#MAX_HEAP_SIZE="4G"/MAX_HEAP_SIZE="176m"/' ~/.ccm/test/node$i/conf/cassandra-env.sh
-                    sed -i 's/#HEAP_NEWSIZE="800M"/HEAP_NEWSIZE="144M"/' ~/.ccm/test/node$i/conf/cassandra-env.sh
-                  fi
+                  #else
+                    #sed -i 's/#MAX_HEAP_SIZE="4G"/MAX_HEAP_SIZE="176m"/' ~/.ccm/test/node$i/conf/cassandra-env.sh
+                    #sed -i 's/#HEAP_NEWSIZE="800M"/HEAP_NEWSIZE="144M"/' ~/.ccm/test/node$i/conf/cassandra-env.sh
+                  #fi
                   sed -i 's/_timeout_in_ms:.*/_timeout_in_ms: 60000/' ~/.ccm/test/node$i/conf/cassandra.yaml
                   sed -i 's/cross_node_timeout: false/cross_node_timeout: true/' ~/.ccm/test/node$i/conf/cassandra.yaml
                   sed -i 's/concurrent_reads: 32/concurrent_reads: 4/' ~/.ccm/test/node$i/conf/cassandra.yaml
