--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,8 +24,7 @@ aliases:
         - image: circleci/openjdk:8-jdk-node-browsers
           environment:
             LOCAL_JMX: no
-            MIN_NODES: 2
-            MAX_NODES: 4
+            NODES_PER_DC: 2
 
       steps:
         - checkout
@@ -73,9 +72,9 @@ aliases:
                 echo "cassandra     readwrite" >> /usr/lib/jvm/java-8-openjdk-amd64/jre/lib/management/jmxremote.access
                 cat /usr/lib/jvm/java-8-openjdk-amd64/jre/lib/management/jmxremote.access
                 ccm create test -v $CASSANDRA_VERSION
-                ccm populate --vnodes -n $MIN_NODES:$MIN_NODES
-                for i in `seq 1 $MAX_NODES` ; do
-                  if [ "$i" -le "$MIN_NODES" ] ; then
+                ccm populate --vnodes -n $NODES_PER_DC:$NODES_PER_DC
+                for i in `seq 1 $(($NODES_PER_DC *2))` ; do
+                  if [ "$i" -le "$NODES_PER_DC" ] ; then
                     sed -i 's/etc\/cassandra\/jmxremote.password/home\/circleci\/.local\/jmxremote.password/' ~/.ccm/test/node$i/conf/cassandra-env.sh
                   else
                     if  echo "$JOB_COMMAND" | grep -q "Pskip-tests-needing-all-nodes-reachable"  ; then
@@ -86,13 +85,8 @@ aliases:
                       sed -i 's/etc\/cassandra\/jmxremote.password/home\/circleci\/.local\/jmxremote.password/' ~/.ccm/test/node$i/conf/cassandra-env.sh
                     fi
                   fi
-                  #if  echo "$CASSANDRA_VERSION" | grep -q "trunk"  ; then
-                    sed -i 's/#MAX_HEAP_SIZE="4G"/MAX_HEAP_SIZE="128m"/' ~/.ccm/test/node$i/conf/cassandra-env.sh
-                    sed -i 's/#HEAP_NEWSIZE="800M"/HEAP_NEWSIZE="104M"/' ~/.ccm/test/node$i/conf/cassandra-env.sh
-                  #else
-                    #sed -i 's/#MAX_HEAP_SIZE="4G"/MAX_HEAP_SIZE="176m"/' ~/.ccm/test/node$i/conf/cassandra-env.sh
-                    #sed -i 's/#HEAP_NEWSIZE="800M"/HEAP_NEWSIZE="144M"/' ~/.ccm/test/node$i/conf/cassandra-env.sh
-                  #fi
+                  sed -i 's/#MAX_HEAP_SIZE="4G"/MAX_HEAP_SIZE="128m"/' ~/.ccm/test/node$i/conf/cassandra-env.sh
+                  sed -i 's/#HEAP_NEWSIZE="800M"/HEAP_NEWSIZE="104M"/' ~/.ccm/test/node$i/conf/cassandra-env.sh
                   sed -i 's/_timeout_in_ms:.*/_timeout_in_ms: 60000/' ~/.ccm/test/node$i/conf/cassandra.yaml
                   sed -i 's/cross_node_timeout: false/cross_node_timeout: true/' ~/.ccm/test/node$i/conf/cassandra.yaml
                   sed -i 's/concurrent_reads: 32/concurrent_reads: 4/' ~/.ccm/test/node$i/conf/cassandra.yaml
