test less test memory

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -320,32 +320,32 @@ jobs:
     c_4-0_one-reaper:
       environment:
         CASSANDRA_VERSION: git:trunk
-        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx1g" -Dtest=ReaperCassandraIT -Pskip-tests-needing-all-nodes-reachable
+        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx512m" -Dtest=ReaperCassandraIT -Pskip-tests-needing-all-nodes-reachable
       <<: *default_job
     c_4-0_two-reapers:
       environment:
         CASSANDRA_VERSION: git:trunk
-        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx1g" -Dtest=ReaperCassandraIT -Pskip-tests-needing-all-nodes-reachable -Dgrim.reaper.min=2 -Dgrim.reaper.max=2
+        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx512m" -Dtest=ReaperCassandraIT -Pskip-tests-needing-all-nodes-reachable -Dgrim.reaper.min=2 -Dgrim.reaper.max=2
       <<: *default_job
     c_4-0_flapping-reapers:
       environment:
         CASSANDRA_VERSION: git:trunk
-        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx1g" -Dtest=ReaperCassandraIT -Pskip-tests-needing-all-nodes-reachable -Dgrim.reaper.min=2 -Dgrim.reaper.max=4
+        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx512m" -Dtest=ReaperCassandraIT -Pskip-tests-needing-all-nodes-reachable -Dgrim.reaper.min=2 -Dgrim.reaper.max=4
       <<: *default_job
     c_4-0_one-reaper_incremental:
       environment:
         CASSANDRA_VERSION: git:trunk
-        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx1g" -Dtest=ReaperCassandraIT -Ponly-tests-needing-all-nodes-reachable
+        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx512m" -Dtest=ReaperCassandraIT -Ponly-tests-needing-all-nodes-reachable
       <<: *default_job
     c_4-0_two-reapers_incremental:
       environment:
         CASSANDRA_VERSION: git:trunk
-        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx1g" -Dtest=ReaperCassandraIT -Ponly-tests-needing-all-nodes-reachable -Dgrim.reaper.min=2 -Dgrim.reaper.max=2
+        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx512m" -Dtest=ReaperCassandraIT -Ponly-tests-needing-all-nodes-reachable -Dgrim.reaper.min=2 -Dgrim.reaper.max=2
       <<: *default_job
     c_4-0_flapping-reapers_incremental:
       environment:
         CASSANDRA_VERSION: git:trunk
-        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx1g" -Dtest=ReaperCassandraIT -Ponly-tests-needing-all-nodes-reachable -Dgrim.reaper.min=2 -Dgrim.reaper.max=4
+        JOB_COMMAND: mvn -B surefire:test -DsurefireArgLine="-Xmx512m" -Dtest=ReaperCassandraIT -Ponly-tests-needing-all-nodes-reachable -Dgrim.reaper.min=2 -Dgrim.reaper.max=4
       <<: *default_job
 workflows:
   version: 2
